--- a/XSL/EjerciciosXSL/EjercicioExamenTanques/tanques.html
+++ b/XSL/EjerciciosXSL/EjercicioExamenTanques/tanques.html
@@ -1,9 +1,8 @@
 <style>
             th {
-            color:white;
-            background-color:blue;
-            }
-        </style><html>
+                color: white;
+                background-color: blue;
+            }</style><html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
       <title>Tanques</title>
@@ -16,91 +15,80 @@
             <th>Tanque</th>
             <th>Jugada</th>
          </tr>
-         <tr style="background:&#xA;             #00FAFF;">
+         <tr style="background:  #00FAFF;">
             <td>1</td>
             <td>1</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Comienzo del juego moviendo hacía arriba</td>
          </tr>
-         <tr style="background:&#xA;             #00CAFF">
+         <tr style="background:  #00CAFF">
             <td>2</td>
             <td>2</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Comienzo del juego moviendo hacía abajo</td>
          </tr>
-         <tr style="background:&#xA;             #00FAFF;">
+         <tr style="background:  #00FAFF;">
             <td>3</td>
             <td>1</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
-         <tr style="background:&#xA;             #00CAFF">
+         <tr style="background:  #00CAFF">
             <td>4</td>
             <td>2</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
-         <tr style="background:&#xA;             #00FAFF;">
+         <tr style="background:  #00FAFF;">
             <td>5</td>
             <td>1</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
-         <tr style="background:&#xA;             #00CAFF">
+         <tr style="background:  #00CAFF">
             <td>6</td>
             <td>2</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
-         <tr style="background:&#xA;             #00FAFF;">
+         <tr style="background:  #00FAFF;">
             <td>7</td>
             <td>1</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía arriba</td>
          </tr>
-         <tr style="background:&#xA;             #00CAFF">
+         <tr style="background:  #00CAFF">
             <td>8</td>
             <td>2</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía abajo</td>
          </tr>
-         <tr style="background:&#xA;             #00FAFF;">
+         <tr style="background:  #00FAFF;">
             <td>9</td>
             <td>1</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque1.jpg"></td>
             <td>Movimiento hacía derecha</td>
          </tr>
-         <tr style="background:&#xA;             #00CAFF">
+         <tr style="background:  #00CAFF">
             <td>10</td>
             <td>2</td>
             <td><img width="40%" src="http://www.webdidacticarafaelmunoz.appspot.com/lmsgi/image/tanque2.jpg"></td>
             <td>Movimiento hacía izquierda</td>
          </tr>
       </table><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><table border="1">
-         <tr>
-            <th></th>
-            <th>1</th>
-            <th>2</th>
-            <th>3</th>
-            <th>4</th>
-            <th>5</th>
-            <th>6</th>
-            <th>7</th>
-            <th>8</th>
+         <tr style="background: blue; color: white;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
          </tr>
          <tr>
-            <th>1</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-         </tr>
-         <tr>
-            <th>2</th>
+            <td style="background: blue; color: white;">1</td>
             <td></td>
             <td></td>
             <td></td>
@@ -111,7 +99,7 @@
             <td></td>
          </tr>
          <tr>
-            <th>3</th>
+            <td style="background: blue; color: white;">2</td>
             <td></td>
             <td></td>
             <td></td>
@@ -122,7 +110,51 @@
             <td></td>
          </tr>
          <tr>
-            <th>4</th>
+            <td style="background: blue; color: white;">3</td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">4</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: red;"></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">5</td>
+            <td style="background: red;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">6</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">7</td>
             <td></td>
             <td></td>
             <td></td>
@@ -133,40 +165,7 @@
             <td></td>
          </tr>
          <tr>
-            <th>5</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-         </tr>
-         <tr>
-            <th>6</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-         </tr>
-         <tr>
-            <th>7</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-         </tr>
-         <tr>
-            <th>8</th>
+            <td style="background: blue; color: white;">8</td>
             <td></td>
             <td></td>
             <td></td>
@@ -177,5 +176,414 @@
             <td></td>
          </tr>
       </table>
+      <p></p>
+      <table border="1">
+         <tr style="background: blue; color: white;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">3</td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">4</td>
+            <td style="background: red;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">5</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: red;"></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">6</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+      </table>
+      <p></p>
+      <table border="1">
+         <tr style="background: blue; color: white;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">3</td>
+            <td style="background: red;"></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">4</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">5</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">6</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td style="background: red;"></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+      </table>
+      <p></p>
+      <table border="1">
+         <tr style="background: blue; color: white;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">2</td>
+            <td style="background: red;"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">3</td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">4</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">5</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">6</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td style="background: red;"></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+      </table>
+      <p></p>
+      <table border="1">
+         <tr style="background: blue; color: white;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">2</td>
+            <td></td>
+            <td style="background: red;"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">3</td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">4</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">5</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">6</td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td style="background: black;"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td style="background: red;"></td>
+            <td></td>
+         </tr>
+         <tr>
+            <td style="background: blue; color: white;">8</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+         </tr>
+      </table>
+      <p></p>
    </body>
 </html>
